Change migration file

--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,5 @@ test:
 production:
   <<: *default
   database: CalendarApp_production
-  username: CalendarApp
+  username: root
   password: <%= ENV['CALENDARAPP_DATABASE_PASSWORD'] %>
