--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,4 @@ production:
   database: CalendarApp_production
   username: root
   password: <%= ENV['CALENDARAPP_DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
